fixed z-index issue for options

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -25,6 +25,8 @@
     height: 100px; 
     width: 300px;
 
+    z-index: 1;
+
     &__mins {
         font-size: 60px;
         font-weight: 700;
@@ -74,7 +76,6 @@
 
 .hide-options {
     margin-right: 0;
-    z-index: -1;
 }
 
 .start-btn {
